# rust_wgpu_3D_vision

./: Cargo.toml  LICENSE  README.md
.templates/new-feature-rust/domain/: mod.rs
src/: camera_state.rs  cube_model.rs  game_state.rs  instance.rs  lib.rs  main.rs  render_pipeline_state.rs  render_state.rs  shader.wgsl
src/camera/: camera_controller.rs  camera_state.rs  mod.rs  orbit_camera.rs
src/camera/data/: mod.rs
src/camera/domain/entities/: camera.rs  mod.rs  orbit_camera.rs
src/camera/presentation/: mod.rs
src/camera/presentation/states/: camera_controller.rs  camera_state.rs  mod.rs
src/core/data/sources/: shader.wgsl
src/core/domain/entities/: cube_model.rs  mod.rs
src/core/presentation/states/: game_state.rs  mod.rs  render_pipeline_state.rs
src/extras/math/: mod.rs  vector3.rs
